<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.fank243.study</groupId>
    <artifactId>fank243-study</artifactId>
    <version>1.0.1</version>
    <modules>
        <module>study-infrastructure</module>
        <module>study-core</module>
        <module>study-server</module>
        <module>study-common</module>
        <module>study-server/server-file</module>
        <module>study-server/server-file/file-api</module>
        <module>study-server/server-file/file-server</module>
    </modules>
    <packaging>pom</packaging>

    <name>fank243-study</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies -->
        <spring-boot.version>2.7.4</spring-boot.version>
        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
        <spring-cloud.version>2021.0.4</spring-cloud.version>
        <!-- https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E -->
        <!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-alibaba-dependencies -->
        <spring-cloud-alibaba.version>2021.0.4.0</spring-cloud-alibaba.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fank243.study</groupId>
                <artifactId>study-dependencies</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.fank243.study</groupId>
                <artifactId>study-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fank243.study</groupId>
                <artifactId>study-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fank243.study</groupId>
                <artifactId>study-ds</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fank243.study</groupId>
                <artifactId>study-mq</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fank243.study</groupId>
                <artifactId>study-netty</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fank243.study</groupId>
                <artifactId>study-sentinel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fank243.study</groupId>
                <artifactId>system-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fank243.study</groupId>
                <artifactId>support-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fank243.study</groupId>
                <artifactId>file-api</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!--自建仓库-->
    <repositories>
        <repository>
            <id>github</id>
            <name>GitHub Maven Packages</name>
            <url>https://maven.pkg.github.com/fank243/mvn-repo</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </releases>
        </repository>
    </repositories>
</project>
